--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
-                <h3>Are we alone? <small>Ufologists Weigh In</small></h3>
+                <h3>Are we alone?</h3>
             </div>
             <div class="col-md-8">
                 <p>
